2009-01-31  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-test-case.h (run): A new overloaded function taking 
	a string argument added.
	* eca-chainsetup-parser.h (interpret_audio_format): Corrected
	function signature, may throw an exception.
	
2008-09-28  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-logger.h (ECA_LOG_MSG_NOPREFIX): Added.

2008-09-21  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-chainsetup-parser.cpp (interpret_options): Now takes a const
	vector.
	* eca-chainsetup.cpp (interpret_options): Now takes a const
	vector.

2008-08-20  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* jack-connection.h (file added): 
	* library interface version to 21:0:1.

2008-08-21  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* library interface version 20 frozen (2.5.1 release)

2008-08-20  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-control-base.cpp (quit_async added): 
	* library interface version to 20:0:0.
	
2008-08-16  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* library interface version 19 frozen (2.5.0 release)
	* audioio-loop.h (id): Renamed to tag().

2008-07-13  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-chainsetup.cpp (audio_object_open_info): Renamed from
	audio_object_info and moved to private scope.

	* eca-object-factory.cpp (audio_object_format_to_eos): Added.

2008-07-08  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* ctrl-source.h: Major refactoring. No longer
	inherits ECA_AUDIO_POSITION.
	* generic-controller.h: Now inherits ECA_AUDIO_POSITION.

2008-07-06  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-time.h (valid): Added.
	* eca-audio-time.h (mark_as_invalid): Added.

2008-07-02  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-position.h (seek_position): Moved to protected scope. The signature
	and the call semantics were also changed. All classed inhering from 
	ECA_AUDIO_POSITION need to be updated.
	* eca-audio-position.h (supports_seeking, supports_seeking_sample_accurate): Added
	as pure virtual methods.